// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment List Item should render AnonymousCommenting 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -93,11 +93,43 @@
      <div
        class="css-rtudyd-CommentListItemActions ew53o3y0"
      >
        <div
          class="css-rtudyd-CommentListItemActions ew53o3y0"
+       >
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           <span
+             class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
                />
+             </svg>
+           </span>
+           Antworten
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           />
+         </button>
+       </div>
        <div
          class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
        >
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1""
`;

exports[`Comment List Item should render Commenting 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -93,11 +93,43 @@
      <div
        class="css-rtudyd-CommentListItemActions ew53o3y0"
      >
        <div
          class="css-rtudyd-CommentListItemActions ew53o3y0"
+       >
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           <span
+             class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+               />
+             </svg>
+           </span>
+           Antworten
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
+         </button>
+       </div>
        <div
          class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
        >
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1"
@@ -109,15 +141,16 @@
            </div>
            <div
              class="css-104kfyv-RatingWrapper-RatingWrapper-RatingWrapper-RatingWrapper e15hksji0"
            >
              <span
-               aria-label="0 Stars"
-               class="MuiRating-root MuiRating-sizeMedium Mui-readOnly MuiRating-readOnly css-ryrseu-MuiRating-root"
-               role="img"
+               class="MuiRating-root MuiRating-sizeMedium css-iljtu2-MuiRating-root"
              >
-               <span>
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":rp:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -135,12 +168,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   1 Star
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":rp:"
+                 name=":ro:"
+                 type="radio"
+                 value="1"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":rq:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -158,12 +206,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   2 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":rq:"
+                 name=":ro:"
+                 type="radio"
+                 value="2"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":rr:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -181,12 +244,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   3 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":rr:"
+                 name=":ro:"
+                 type="radio"
+                 value="3"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":rs:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -204,12 +282,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   4 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":rs:"
+                 name=":ro:"
+                 type="radio"
+                 value="4"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":rt:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -226,12 +319,40 @@
                      />
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
+                 </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   5 Stars
                  </span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":rt:"
+                 name=":ro:"
+                 type="radio"
+                 value="5"
+               />
+               <label
+                 class="MuiRating-label MuiRating-pristine css-dqr9h-MuiRating-label"
+               >
+                 <input
+                   class="MuiRating-visuallyHidden"
+                   id=":ro:-empty"
+                   name=":ro:"
+                   type="radio"
+                   value=""
+                 />
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   Empty
                  </span>
+               </label>
              </span>
            </div>
          </div>
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1"
@@ -243,15 +364,16 @@
            </div>
            <div
              class="css-104kfyv-RatingWrapper-RatingWrapper-RatingWrapper-RatingWrapper e15hksji0"
            >
              <span
-               aria-label="0 Stars"
-               class="MuiRating-root MuiRating-sizeMedium Mui-readOnly MuiRating-readOnly css-ryrseu-MuiRating-root"
-               role="img"
+               class="MuiRating-root MuiRating-sizeMedium css-iljtu2-MuiRating-root"
              >
-               <span>
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":rv:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -269,12 +391,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   1 Star
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":rv:"
+                 name=":ru:"
+                 type="radio"
+                 value="1"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r10:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -292,12 +429,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   2 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r10:"
+                 name=":ru:"
+                 type="radio"
+                 value="2"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r11:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -315,12 +467,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   3 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r11:"
+                 name=":ru:"
+                 type="radio"
+                 value="3"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r12:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -338,12 +505,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   4 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r12:"
+                 name=":ru:"
+                 type="radio"
+                 value="4"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r13:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -361,11 +543,39 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   5 Stars
                  </span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r13:"
+                 name=":ru:"
+                 type="radio"
+                 value="5"
+               />
+               <label
+                 class="MuiRating-label MuiRating-pristine css-dqr9h-MuiRating-label"
+               >
+                 <input
+                   class="MuiRating-visuallyHidden"
+                   id=":ru:-empty"
+                   name=":ru:"
+                   type="radio"
+                   value=""
+                 />
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   Empty
+                 </span>
+               </label>
              </span>
            </div>
          </div>
        </div>
      </div>"
`;

exports[`Comment List Item should render Default 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`Comment List Item should render Editing 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -93,11 +93,74 @@
      <div
        class="css-rtudyd-CommentListItemActions ew53o3y0"
      >
        <div
          class="css-rtudyd-CommentListItemActions ew53o3y0"
+       >
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           <span
+             class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+               />
+             </svg>
+           </span>
+           Antworten
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           />
+         </button>
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           <span
+             class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
                />
+               <path
+                 d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
+               />
+             </svg>
+           </span>
+           Editieren
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           />
+         </button>
+       </div>
        <div
          class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
        >
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1"
@@ -109,15 +172,16 @@
            </div>
            <div
              class="css-104kfyv-RatingWrapper-RatingWrapper-RatingWrapper-RatingWrapper e15hksji0"
            >
              <span
-               aria-label="0 Stars"
-               class="MuiRating-root MuiRating-sizeMedium Mui-readOnly MuiRating-readOnly css-ryrseu-MuiRating-root"
-               role="img"
+               class="MuiRating-root MuiRating-sizeMedium css-iljtu2-MuiRating-root"
              >
-               <span>
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1h:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -135,12 +199,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   1 Star
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1h:"
+                 name=":r1g:"
+                 type="radio"
+                 value="1"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1i:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -158,12 +237,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   2 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1i:"
+                 name=":r1g:"
+                 type="radio"
+                 value="2"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1j:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -181,12 +275,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   3 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1j:"
+                 name=":r1g:"
+                 type="radio"
+                 value="3"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1k:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -204,12 +313,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   4 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1k:"
+                 name=":r1g:"
+                 type="radio"
+                 value="4"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1l:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -226,12 +350,40 @@
                      />
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
+                 </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   5 Stars
                  </span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1l:"
+                 name=":r1g:"
+                 type="radio"
+                 value="5"
+               />
+               <label
+                 class="MuiRating-label MuiRating-pristine css-dqr9h-MuiRating-label"
+               >
+                 <input
+                   class="MuiRating-visuallyHidden"
+                   id=":r1g:-empty"
+                   name=":r1g:"
+                   type="radio"
+                   value=""
+                 />
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   Empty
                  </span>
+               </label>
              </span>
            </div>
          </div>
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1"
@@ -243,15 +395,16 @@
            </div>
            <div
              class="css-104kfyv-RatingWrapper-RatingWrapper-RatingWrapper-RatingWrapper e15hksji0"
            >
              <span
-               aria-label="0 Stars"
-               class="MuiRating-root MuiRating-sizeMedium Mui-readOnly MuiRating-readOnly css-ryrseu-MuiRating-root"
-               role="img"
+               class="MuiRating-root MuiRating-sizeMedium css-iljtu2-MuiRating-root"
              >
-               <span>
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1n:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -269,12 +422,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   1 Star
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1n:"
+                 name=":r1m:"
+                 type="radio"
+                 value="1"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1o:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -292,12 +460,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   2 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1o:"
+                 name=":r1m:"
+                 type="radio"
+                 value="2"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1p:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -315,12 +498,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   3 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1p:"
+                 name=":r1m:"
+                 type="radio"
+                 value="3"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1q:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -338,12 +536,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   4 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1q:"
+                 name=":r1m:"
+                 type="radio"
+                 value="4"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1r:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -361,11 +574,39 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   5 Stars
                  </span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1r:"
+                 name=":r1m:"
+                 type="radio"
+                 value="5"
+               />
+               <label
+                 class="MuiRating-label MuiRating-pristine css-dqr9h-MuiRating-label"
+               >
+                 <input
+                   class="MuiRating-visuallyHidden"
+                   id=":r1m:-empty"
+                   name=":r1m:"
+                   type="radio"
+                   value=""
+                 />
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   Empty
+                 </span>
+               </label>
              </span>
            </div>
          </div>
        </div>
      </div>"
`;

exports[`Comment List Item should render Nested 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -93,11 +93,74 @@
      <div
        class="css-rtudyd-CommentListItemActions ew53o3y0"
      >
        <div
          class="css-rtudyd-CommentListItemActions ew53o3y0"
+       >
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           <span
+             class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+               />
+             </svg>
+           </span>
+           Antworten
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+           />
+         </button>
+         <button
+           class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+           tabindex="0"
+           type="button"
+         >
+           <span
+             class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
+               />
+             </svg>
+           </span>
+           Editieren
+           <span
+             class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
+         </button>
+       </div>
        <div
          class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
        >
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1"
@@ -109,15 +172,16 @@
            </div>
            <div
              class="css-104kfyv-RatingWrapper-RatingWrapper-RatingWrapper-RatingWrapper e15hksji0"
            >
              <span
-               aria-label="0 Stars"
-               class="MuiRating-root MuiRating-sizeMedium Mui-readOnly MuiRating-readOnly css-ryrseu-MuiRating-root"
-               role="img"
+               class="MuiRating-root MuiRating-sizeMedium css-iljtu2-MuiRating-root"
+             >
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1t:"
                >
-               <span>
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -135,12 +199,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   1 Star
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1t:"
+                 name=":r1s:"
+                 type="radio"
+                 value="1"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1u:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -158,12 +237,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   2 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1u:"
+                 name=":r1s:"
+                 type="radio"
+                 value="2"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r1v:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -181,12 +275,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   3 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r1v:"
+                 name=":r1s:"
+                 type="radio"
+                 value="3"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r20:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -204,12 +313,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   4 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r20:"
+                 name=":r1s:"
+                 type="radio"
+                 value="4"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r21:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -227,12 +351,40 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   5 Stars
                  </span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r21:"
+                 name=":r1s:"
+                 type="radio"
+                 value="5"
+               />
+               <label
+                 class="MuiRating-label MuiRating-pristine css-dqr9h-MuiRating-label"
+               >
+                 <input
+                   class="MuiRating-visuallyHidden"
+                   id=":r1s:-empty"
+                   name=":r1s:"
+                   type="radio"
+                   value=""
+                 />
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   Empty
                  </span>
+               </label>
+             </span>
            </div>
          </div>
          <div
            class="css-1mhglx2-StarRatingWrapper e41600y1"
          >
@@ -243,15 +395,16 @@
            </div>
            <div
              class="css-104kfyv-RatingWrapper-RatingWrapper-RatingWrapper-RatingWrapper e15hksji0"
            >
              <span
-               aria-label="0 Stars"
-               class="MuiRating-root MuiRating-sizeMedium Mui-readOnly MuiRating-readOnly css-ryrseu-MuiRating-root"
-               role="img"
+               class="MuiRating-root MuiRating-sizeMedium css-iljtu2-MuiRating-root"
+             >
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r23:"
                >
-               <span>
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -269,12 +422,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   1 Star
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r23:"
+                 name=":r22:"
+                 type="radio"
+                 value="1"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r24:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -292,12 +460,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   2 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r24:"
+                 name=":r22:"
+                 type="radio"
+                 value="2"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r25:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -315,12 +498,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   3 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r25:"
+                 name=":r22:"
+                 type="radio"
+                 value="3"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r26:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -338,12 +536,27 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   4 Stars
                  </span>
-               <span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r26:"
+                 name=":r22:"
+                 type="radio"
+                 value="4"
+               />
+               <label
+                 class="css-dqr9h-MuiRating-label"
+                 for=":r27:"
+               >
                  <span
                    class="MuiRating-icon MuiRating-iconEmpty css-1c99szj-MuiRating-icon"
                  >
                    <svg
                      fill="currentColor"
@@ -361,13 +574,603 @@
                      <path
                        d="M22 9.24l-7.19-.62L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.63-7.03L22 9.24zM12 15.4l-3.76 2.27 1-4.28-3.32-2.88 4.38-.38L12 6.1l1.71 4.04 4.38.38-3.32 2.88 1 4.28L12 15.4z"
                      />
                    </svg>
                  </span>
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   5 Stars
+                 </span>
+               </label>
+               <input
+                 class="MuiRating-visuallyHidden"
+                 id=":r27:"
+                 name=":r22:"
+                 type="radio"
+                 value="5"
+               />
+               <label
+                 class="MuiRating-label MuiRating-pristine css-dqr9h-MuiRating-label"
+               >
+                 <input
+                   class="MuiRating-visuallyHidden"
+                   id=":r22:-empty"
+                   name=":r22:"
+                   type="radio"
+                   value=""
+                 />
+                 <span
+                   class="MuiRating-visuallyHidden"
+                 >
+                   Empty
                  </span>
+               </label>
              </span>
+           </div>
+         </div>
+       </div>
+     </div>
+     <aside
+       class="css-r8xp2x-CommentListItemChildren ew53o3y1"
+     >
+       <article
+         class="css-4zvvnd-CommentWrapper ekbi54x8"
+       >
+         <header
+           class="css-p4cys7-CommentHeader ekbi54x7"
+         >
+           <img
+             alt="DSC07717"
+             class="css-7gh4r4-ImageWrapper-avatarStyles e1shv2yg0"
+             loading="lazy"
+             srcset="https://unsplash.it/800/800 800w,
+ https://unsplash.it/500/500 500w,
+ https://unsplash.it/300/300 300w,
+ https://unsplash.it/200/200 200w"
+             title=""
+           />
+           <div
+             class="css-1x1fqyu-CommentHeaderContent ekbi54x6"
+           >
+             <div
+               class="css-l1mcyg-CommentName ekbi54x5"
+             >
+               Signed Up User
+               <div
+                 class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
+               >
+                 <svg
+                   fill="currentColor"
+                   height="1em"
+                   stroke="currentColor"
+                   stroke-width="0"
+                   viewBox="0 0 24 24"
+                   width="1em"
+                   xmlns="http://www.w3.org/2000/svg"
+                 >
+                   <title>
+                     Member
+                   </title>
+                   <path
+                     d="M0 0h24v24H0z"
+                     fill="none"
+                   />
+                   <path
+                     d="M23 12l-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72l-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
+                   />
+                 </svg>
                </div>
              </div>
+             <div
+               class="css-rox5w-CommentFlair ekbi54x3"
+             >
+               Flair
+             </div>
            </div>
+         </header>
+         <div
+           class="css-td83z9-CommentContent ekbi54x2"
+         >
+           <h1
+             class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
+           >
+             <strong>
+               de Finibus Bonorum et Malorum
+             </strong>
+           </h1>
+           <div
+             class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
+           >
+             <div
+               data-gramm="false"
+               data-slate-editor="true"
+               data-slate-node="value"
+               style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
+             >
+               <p
+                 class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
+                 data-slate-node="element"
+               >
+                 <span
+                   data-slate-node="text"
+                 >
+                   <span
+                     data-slate-string="true"
+                   >
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                   </span>
+                 </span>
+               </p>
              </div>
+           </div>
+         </div>
+         <div
+           class="css-rtudyd-CommentListItemActions ew53o3y0"
+         >
+           <div
+             class="css-rtudyd-CommentListItemActions ew53o3y0"
+           >
+             <button
+               class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+               tabindex="0"
+               type="button"
+             >
+               <span
+                 class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+               >
+                 <svg
+                   fill="currentColor"
+                   height="1em"
+                   stroke="currentColor"
+                   stroke-width="0"
+                   viewBox="0 0 24 24"
+                   width="1em"
+                   xmlns="http://www.w3.org/2000/svg"
+                 >
+                   <path
+                     d="M0 0h24v24H0z"
+                     fill="none"
+                   />
+                   <path
+                     d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+                   />
+                 </svg>
+               </span>
+               Antworten
+               <span
+                 class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+               />
+             </button>
+             <button
+               class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+               tabindex="0"
+               type="button"
+             >
+               <span
+                 class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+               >
+                 <svg
+                   fill="currentColor"
+                   height="1em"
+                   stroke="currentColor"
+                   stroke-width="0"
+                   viewBox="0 0 24 24"
+                   width="1em"
+                   xmlns="http://www.w3.org/2000/svg"
+                 >
+                   <path
+                     d="M0 0h24v24H0z"
+                     fill="none"
+                   />
+                   <path
+                     d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
+                   />
+                 </svg>
+               </span>
+               Editieren
+               <span
+                 class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+               />
+             </button>
+           </div>
+           <div
+             class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
+           />
+         </div>
+         <aside
+           class="css-r8xp2x-CommentListItemChildren ew53o3y1"
+         >
+           <article
+             class="css-4zvvnd-CommentWrapper ekbi54x8"
+           >
+             <header
+               class="css-p4cys7-CommentHeader ekbi54x7"
+             >
+               <img
+                 alt="DSC07717"
+                 class="css-7gh4r4-ImageWrapper-avatarStyles e1shv2yg0"
+                 loading="lazy"
+                 srcset="https://unsplash.it/800/800 800w,
+ https://unsplash.it/500/500 500w,
+ https://unsplash.it/300/300 300w,
+ https://unsplash.it/200/200 200w"
+                 title=""
+               />
+               <div
+                 class="css-1x1fqyu-CommentHeaderContent ekbi54x6"
+               >
+                 <div
+                   class="css-l1mcyg-CommentName ekbi54x5"
+                 >
+                   Dr. Anonymous
+                 </div>
+                 <div
+                   class="css-bc7ih0-CommentFlair-CommentFlair ekbi54x3"
+                 >
+                   Source
+                 </div>
+               </div>
+             </header>
+             <div
+               class="css-td83z9-CommentContent ekbi54x2"
+             >
+               <h1
+                 class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
+               >
+                 <strong>
+                   de Finibus Bonorum et Malorum
+                 </strong>
+               </h1>
+               <div
+                 class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
+               >
+                 <div
+                   data-gramm="false"
+                   data-slate-editor="true"
+                   data-slate-node="value"
+                   style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
+                 >
+                   <p
+                     class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
+                     data-slate-node="element"
+                   >
+                     <span
+                       data-slate-node="text"
+                     >
+                       <span
+                         data-slate-string="true"
+                       >
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                       </span>
+                     </span>
+                   </p>
+                 </div>
+               </div>
+             </div>
+             <div
+               class="css-rtudyd-CommentListItemActions ew53o3y0"
+             >
+               <div
+                 class="css-rtudyd-CommentListItemActions ew53o3y0"
+               >
+                 <button
+                   class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+                   tabindex="0"
+                   type="button"
+                 >
+                   <span
+                     class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+                   >
+                     <svg
+                       fill="currentColor"
+                       height="1em"
+                       stroke="currentColor"
+                       stroke-width="0"
+                       viewBox="0 0 24 24"
+                       width="1em"
+                       xmlns="http://www.w3.org/2000/svg"
+                     >
+                       <path
+                         d="M0 0h24v24H0z"
+                         fill="none"
+                       />
+                       <path
+                         d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+                       />
+                     </svg>
+                   </span>
+                   Antworten
+                   <span
+                     class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+                   />
+                 </button>
+               </div>
+               <div
+                 class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
+               />
+             </div>
+           </article>
+         </aside>
+       </article>
+       <article
+         class="css-4zvvnd-CommentWrapper ekbi54x8"
+       >
+         <header
+           class="css-p4cys7-CommentHeader ekbi54x7"
+         >
+           <img
+             alt="DSC07717"
+             class="css-7gh4r4-ImageWrapper-avatarStyles e1shv2yg0"
+             loading="lazy"
+             srcset="https://unsplash.it/800/800 800w,
+ https://unsplash.it/500/500 500w,
+ https://unsplash.it/300/300 300w,
+ https://unsplash.it/200/200 200w"
+             title=""
+           />
+           <div
+             class="css-1x1fqyu-CommentHeaderContent ekbi54x6"
+           >
+             <div
+               class="css-l1mcyg-CommentName ekbi54x5"
+             >
+               Dr. Anonymous
+             </div>
+             <div
+               class="css-bc7ih0-CommentFlair-CommentFlair ekbi54x3"
+             >
+               Source
+             </div>
+           </div>
+         </header>
+         <div
+           class="css-td83z9-CommentContent ekbi54x2"
+         >
+           <h1
+             class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
+           >
+             <strong>
+               de Finibus Bonorum et Malorum
+             </strong>
+           </h1>
+           <div
+             class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
+           >
+             <div
+               data-gramm="false"
+               data-slate-editor="true"
+               data-slate-node="value"
+               style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
+             >
+               <p
+                 class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
+                 data-slate-node="element"
+               >
+                 <span
+                   data-slate-node="text"
+                 >
+                   <span
+                     data-slate-string="true"
+                   >
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                   </span>
+                 </span>
+               </p>
+             </div>
+           </div>
+         </div>
+         <div
+           class="css-rtudyd-CommentListItemActions ew53o3y0"
+         >
+           <div
+             class="css-rtudyd-CommentListItemActions ew53o3y0"
+           >
+             <button
+               class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+               tabindex="0"
+               type="button"
+             >
+               <span
+                 class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+               >
+                 <svg
+                   fill="currentColor"
+                   height="1em"
+                   stroke="currentColor"
+                   stroke-width="0"
+                   viewBox="0 0 24 24"
+                   width="1em"
+                   xmlns="http://www.w3.org/2000/svg"
+                 >
+                   <path
+                     d="M0 0h24v24H0z"
+                     fill="none"
+                   />
+                   <path
+                     d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+                   />
+                 </svg>
+               </span>
+               Antworten
+               <span
+                 class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+               />
+             </button>
+           </div>
+           <div
+             class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
+           />
+         </div>
+         <aside
+           class="css-r8xp2x-CommentListItemChildren ew53o3y1"
+         >
+           <article
+             class="css-4zvvnd-CommentWrapper ekbi54x8"
+           >
+             <header
+               class="css-p4cys7-CommentHeader ekbi54x7"
+             >
+               <img
+                 alt="DSC07717"
+                 class="css-7gh4r4-ImageWrapper-avatarStyles e1shv2yg0"
+                 loading="lazy"
+                 srcset="https://unsplash.it/800/800 800w,
+ https://unsplash.it/500/500 500w,
+ https://unsplash.it/300/300 300w,
+ https://unsplash.it/200/200 200w"
+                 title=""
+               />
+               <div
+                 class="css-1x1fqyu-CommentHeaderContent ekbi54x6"
+               >
+                 <div
+                   class="css-l1mcyg-CommentName ekbi54x5"
+                 >
+                   Signed Up User
+                   <div
+                     class="css-6cfhau-CommentVerifiedBadge ekbi54x4"
+                   >
+                     <svg
+                       fill="currentColor"
+                       height="1em"
+                       stroke="currentColor"
+                       stroke-width="0"
+                       viewBox="0 0 24 24"
+                       width="1em"
+                       xmlns="http://www.w3.org/2000/svg"
+                     >
+                       <title>
+                         Member
+                       </title>
+                       <path
+                         d="M0 0h24v24H0z"
+                         fill="none"
+                       />
+                       <path
+                         d="M23 12l-2.44-2.79.34-3.69-3.61-.82-1.89-3.2L12 2.96 8.6 1.5 6.71 4.69 3.1 5.5l.34 3.7L1 12l2.44 2.79-.34 3.7 3.61.82L8.6 22.5l3.4-1.47 3.4 1.46 1.89-3.19 3.61-.82-.34-3.69L23 12zm-12.91 4.72l-3.8-3.81 1.48-1.48 2.32 2.33 5.85-5.87 1.48 1.48-7.33 7.35z"
+                       />
+                     </svg>
+                   </div>
+                 </div>
+                 <div
+                   class="css-rox5w-CommentFlair ekbi54x3"
+                 >
+                   Flair
+                 </div>
+               </div>
+             </header>
+             <div
+               class="css-td83z9-CommentContent ekbi54x2"
+             >
+               <h1
+                 class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
+               >
+                 <strong>
+                   de Finibus Bonorum et Malorum
+                 </strong>
+               </h1>
+               <div
+                 class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
+               >
+                 <div
+                   data-gramm="false"
+                   data-slate-editor="true"
+                   data-slate-node="value"
+                   style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
+                 >
+                   <p
+                     class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-d3wcwz-MuiTypography-root"
+                     data-slate-node="element"
+                   >
+                     <span
+                       data-slate-node="text"
+                     >
+                       <span
+                         data-slate-string="true"
+                       >
+                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                       </span>
+                     </span>
+                   </p>
+                 </div>
+               </div>
+             </div>
+             <div
+               class="css-rtudyd-CommentListItemActions ew53o3y0"
+             >
+               <div
+                 class="css-rtudyd-CommentListItemActions ew53o3y0"
+               >
+                 <button
+                   class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+                   tabindex="0"
+                   type="button"
+                 >
+                   <span
+                     class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+                   >
+                     <svg
+                       fill="currentColor"
+                       height="1em"
+                       stroke="currentColor"
+                       stroke-width="0"
+                       viewBox="0 0 24 24"
+                       width="1em"
+                       xmlns="http://www.w3.org/2000/svg"
+                     >
+                       <path
+                         d="M0 0h24v24H0z"
+                         fill="none"
+                       />
+                       <path
+                         d="M10 9V5l-7 7 7 7v-4.1c5 0 8.5 1.6 11 5.1-1-5-4-10-11-11z"
+                       />
+                     </svg>
+                   </span>
+                   Antworten
+                   <span
+                     class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+                   />
+                 </button>
+                 <button
+                   class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1knaqv7-MuiButtonBase-root-MuiButton-root"
+                   tabindex="0"
+                   type="button"
+                 >
+                   <span
+                     class="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
+                   >
+                     <svg
+                       fill="currentColor"
+                       height="1em"
+                       stroke="currentColor"
+                       stroke-width="0"
+                       viewBox="0 0 24 24"
+                       width="1em"
+                       xmlns="http://www.w3.org/2000/svg"
+                     >
+                       <path
+                         d="M0 0h24v24H0z"
+                         fill="none"
+                       />
+                       <path
+                         d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04a.996.996 0 000-1.41l-2.34-2.34a.996.996 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
+                       />
+                     </svg>
+                   </span>
+                   Editieren
+                   <span
+                     class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
+                   />
+                 </button>
+               </div>
+               <div
+                 class="css-11ltnyi-CommentRatingsWrapper e1ggg5h80"
+               />
+             </div>
+           </article>
+         </aside>
+       </article>
+     </aside>
    </article>
  </DocumentFragment>"
`;

exports[`Comment List Item should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <article
-     class="css-4zvvnd-CommentWrapper ekbi54x8"
+     class="extra-classname css-4zvvnd-CommentWrapper ekbi54x8"
    >
      <header
        class="css-p4cys7-CommentHeader ekbi54x7"
      >
        <img"
`;

exports[`Comment List Item should render WithEmotion 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <article
-     class="css-4zvvnd-CommentWrapper ekbi54x8"
+     class="css-43t3ty-CommentWrapper-css ekbi54x8"
    >
      <header
        class="css-p4cys7-CommentHeader ekbi54x7"
      >
        <img"
`;
